# zero2prod

./: .env  Cargo.toml  Dockerfile  configuration.yaml  spec.yaml
.cargo/: config.toml
.github/workflows/: general.yml
.sqlx/: query-fedee46d5398cb4e9777d1c7f10c036d63dbfe195c89c191c2dbe639b7e0e74c.json
config/: base.yaml  local.yaml  production.yaml
migrations/: 20231025114508_add_status_to_subscriptions.sql  20231026113108_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health.rs  health_check.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: app.rs  health_check.rs  subscriptions.rs
tests/api/: app.rs  health_check.rs  main.rs  subscriptions.rs  subscriptions_confirm.rs
